Obscure fix for homescreen apps on ios.
When saving the webpage as a homescreen app on ios the entire screen is
used resulting in whitespace above the sticky header. This adds some
content above so the green header streches to the top of the screen.

--- a/src/styles/banner.scss
+++ b/src/styles/banner.scss
@@ -12,6 +12,16 @@
   align-items: center;
   justify-items: center;
   background-color: $primary;
+
+  // ios homescreen app whitespace above header fix.
+  &::before {
+    content: '';
+    width: 100%;
+    height: 3rem;
+    position: absolute;
+    top: -3rem;
+    background-color: inherit;
+  }
 }
 
 .company-logo{
